.provarCaches/00D410000011HE0EAM/objects/rstk__bommassadd__c.object
<CustomObject>
    <description>bommassadd__c</description>
    <fields>
        <fullName>rstk__addeco__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of associated ECO.</inlineHelpText>
        <label>ECO Name</label>
        <referenceTo>rstk__pecoh__c</referenceTo>
        <relationshipLabel>ZZ - Bom Mass Adds</relationshipLabel>
        <relationshipName>ZZ_Bom_Mass_Adds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__addrev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Revision level of  Parent Item when Component becomes effective.</inlineHelpText>
        <label>Add Revision</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.rstk__item__c</field>
                <operation>equals</operation>
                <valueField>rstk__peitemrev__c.rstk__peitemrev_item__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>ZZ - Bom Mass Adds</relationshipLabel>
        <relationshipName>Bom_Mass_Adds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__addsts__c</fullName>
        <inlineHelpText>Valid values are P-Pending, R-Release, I – Implemented</inlineHelpText>
        <label>Add Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Division in which this BOM resides.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ZZ - Bom Mass Adds (Division)</relationshipLabel>
        <relationshipName>Bom_Mass_Adds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__effdate__c</fullName>
        <inlineHelpText>Component Effectivity Date</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__fromdiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>ZZ - Bom Mass Adds (From Division)</relationshipLabel>
        <relationshipName>ZZ_Bom_Mass_Adds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fromeffdate__c</fullName>
        <inlineHelpText>Date Component is Effective.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__fromitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Item Number of Assembly to be copied.</inlineHelpText>
        <label>From Item</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>ZZ - Bom Mass Adds (From Item)</relationshipLabel>
        <relationshipName>ZZ_Bom_Mass_Adds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__fromsts__c</fullName>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Item Number of  the Assembly.</inlineHelpText>
        <label>Assembly Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.rstk__div__c</field>
                <operation>equals</operation>
                <valueField>rstk__peitem__c.rstk__peitem_div__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>ZZ - Bom Mass Adds (Item)</relationshipLabel>
        <relationshipName>Bom_Mass_Adds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__m_noninventoryauthorization__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Non-Inventory Authorization</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__m_noninventoryrequisitions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Non-Inventory Requisitions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ZZ - BOM Mass Add</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>BOM Mass Add Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZZ - Bom Mass Adds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>